membrane/tests/ui/single.stderr
error: expected enum `Result`
  --> tests/ui/single.rs:23:29
   |
23 | pub async fn no_result() -> i32 {}
   |                             ^^^

error: A tuple may not be returned from an `async_dart` function. If a tuple is needed return a struct containing the tuple.
  --> tests/ui/single.rs:25:1
   |
25 | #[async_dart(namespace = "a")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `async_dart` (in Nightly builds, run with -Z macro-backtrace for more info)

error: custom attribute panicked
  --> tests/ui/single.rs:38:1
   |
38 | #[sync_dart(namespace = "a")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: message: #[sync_dart] expected a return type of `Result<T, E>` found an emitter
